[package]
name = "geekdl"
version = "0.1.0"
authors = ["Fish_ <liumy.f@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
reqwest = { version ="0.10.0-alpha.1", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.6"
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.3"
